manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-app
  labels:
    istio-injection: enabled
    name: istio-app
