manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-test-app-service
  namespace: istio-app
  labels:
    app: istio-test-app
    service: istio-test-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: istio-test-app
