manifests/base/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-test-app-gateway
  namespace: istio-app
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: istio-test-app-vs
  namespace: istio-app
spec:
  hosts:
  - "*"
  gateways:
  - istio-test-app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: istio-test-app-service
        port:
          number: 80
    timeout: 30s
    retries:
      attempts: 3
      perTryTimeout: 10s
